sima v0.12.0

 * Major refactoring
 * Add a setup.py, got rid of the Makefile.
 * Switched to Python3 (>=3.2)
 * Depends on requests (http client)
 * Depends on python-musicpd (py3k port of python-mpd)
   configuration file change
   internal database remains the same
 * Temporarily removed userdb feature

-- kaliko jack <kaliko@azylum.org> UNRELEASED


sima v0.11.0

 * straight forward py3k conversion from v0.10.0

-- kaliko jack <kaliko@azylum.org> UNRELEASED


sima v0.10.0

 * Improved album detection (especially multi-artists album)
 * Controls conf file is readable at startup
 * Complete rewrite of MPD client

-- kaliko jack <kaliko@azylum.org>  Wed, 26 Sep 2012 18:56:57 +0200


sima v0.9.2

 * Fixed Makefile, thanks Artur Frysiak (fixes #2849 #2848)

-- kaliko jack <kaliko@azylum.org>  Sun, 26 Feb 2012 22:06:27 +0100


sima v0.9.1

 * Fixed an issue in idle implementation

-- kaliko jack <kaliko@azylum.org>  Fri, 24 Feb 2012 12:04:39 +0100


sima v0.9.0

 * New CLI option --create-db
 * Option main_loop_time removed, use of idle makes it useless
 * New config file option "dynamic" (fixes #2593)

 Refactoring:
 * Start player abstraction, new MPD class (fixes #2418)
 * Use idle MPD command, needs python-mpd >= 0.3

 Bugs fix:
 * PID file creation now respects system umask (fixes #2368)
 * Avoid to queue twice the same album (fixes #2595)
 * Empty password does not trigger auth attempt (fixes #2543)
 * Fixed --var_dir option, thanks Artur Frysiak (fixes #2796)

 Minor changes:
 * Improved execution time in tracks history look up mainly.
 * Switch to python-daemon 0.4

-- kaliko jack <kaliko@azylum.org>  Fri, 10 Feb 2012 11:31:57 +0100


sima v0.8.0

 * New CLI option "--daemon" to run as a daemon

 * Abandoned compatibility with python 2.5 (urllib2.urlopen timeout)
 * Add daemon cli option to daemonize the process (closes #616)
 * Add a Makefile (install, uninstall targets) following GNU standards.
 * Refactored queue_mode method, thanks MsieurHappy ;)